--- a/ShopeeFood.Services/ShopeeFood.Services.csproj
+++ b/ShopeeFood.Services/ShopeeFood.Services.csproj
@@ -1,9 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\Responses\" />
+    <Folder Include="Models\Requests\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ShopeeFood.Commons\ShopeeFood.Commons.csproj" />
+    <ProjectReference Include="..\ShopeeFood.DAL\ShopeeFood.DAL.csproj" />
+  </ItemGroup>
 
 </Project>
