--- a/ShopeeFood.API/appsettings.json
+++ b/ShopeeFood.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=PC-ANHLE\\SQLEXPRESS;Database=ShopeeFoodDemo;Trusted_Connection=True;"
+  }
 }
