--- a/ShopeeFood.API/appsettings.json
+++ b/ShopeeFood.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PC-ANHLE\\SQLEXPRESS;Database=ShopeeFoodDemo;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-8ID1E1D\\SQLEXPRESS;Database=ShopeeFoodDemo;Trusted_Connection=True;"
   }
 }
