--- a/ShopeeFood.DAL/EF/appsettings.json
+++ b/ShopeeFood.DAL/EF/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-8ID1E1D\\SQLEXPRESS;Database=ShopeeFoodDemo;Trusted_Connection=True;"
+    "DefaultConnection": "Server=PC-ANHLE\\SQLEXPRESS;Database=ShopeeFoodDemo;Trusted_Connection=True;"
   }
 }
